--- a/res/layout/expand_listview_main_menu_group.xml
+++ b/res/layout/expand_listview_main_menu_group.xml
@@ -22,6 +22,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@drawable/longpressed_holo_light" />
+        android:background="@color/long_pressed" />
 
 </LinearLayout>
