Custom style updated

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,12 +9,19 @@
         <item name="android:dropDownListViewStyle">@style/MyDropDownListView</item>
         -->
         <item name="android:actionBarStyle">@style/MyFilesActionBar</item>
+        <!-- <item name="android:actionModeStyle">@style/MyFilesActionMode</item> -->
         
     </style>
     
     <style name="MyFilesActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">@color/action_bar_background</item>
         <item name="android:backgroundSplit">@color/action_bar_background</item>
+        
+    </style>
+    <style name="MyFilesActionMode" parent="android:style/Widget.Holo.Light.ActionMode">
+        <item name="android:background">@drawable/action_mode_background</item>
+		<item name="android:backgroundSplit">@drawable/action_mode_background_split</item>
+		
     </style>
     <!--
 	<style name="MyDropDownListView" parent="android:style/Widget.Holo.ListView.DropDown">
