Title view and bottom view modified

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,8 +22,9 @@
         <LinearLayout
             android:id="@+id/linearLayoutSliderBottom"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal">
+            android:layout_height="4dp"
+            android:orientation="horizontal"
+            android:background="@color/blue">
         </LinearLayout>
     </LinearLayout>
 
