--- a/res/drawable/border.xml
+++ b/res/drawable/border.xml
@@ -1,3 +1,14 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<stroke android:width="1dip" android:color="#176DED"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item>
+        <shape>
+            <solid android:color="#FFFFFF" />
+        </shape>
+    </item>
+    <item android:bottom="2dp">
+        <shape>
+            <solid android:color="#C6176DED"/>
+        </shape>
+    </item>
+
+</layer-list>
