--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:childDivider="@android:color/transparent"
+        android:padding="1dp"
         />
 
 </android.support.v4.widget.DrawerLayout>
