--- a/res/layout/expand_listview_main_menu_child.xml
+++ b/res/layout/expand_listview_main_menu_child.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical" >
 
     <View
+        android:id="@+id/viewSeparator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/pressed" />
@@ -19,7 +20,7 @@
         android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/menu_foreground"
+        android:textColor="#88000000"
         android:textSize="18sp" />
 
 </LinearLayout>
