--- a/res/layout/expand_listview_main_menu_group.xml
+++ b/res/layout/expand_listview_main_menu_group.xml
@@ -16,9 +16,8 @@
         android:maxLines="1"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="4dp"
-        android:textColor="@color/menu_foreground"
-        android:textSize="14sp" 
-        android:textStyle="bold"/>
+        android:textColor="@color/blue"
+        android:textSize="14sp" />
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
